[gd_scene load_steps=10 format=3 uid="uid://eu8sigjhnj2"]

[ext_resource type="Script" path="res://scenes/build_phase/scripts/snap_target_node.gd" id="1_74qrg"]
[ext_resource type="Script" path="res://scenes/build_phase/scripts/binary_tree.gd" id="2_5d5va"]
[ext_resource type="PackedScene" uid="uid://bvc8rgpppkr2a" path="res://scenes/build_phase/scenes/snap_target.tscn" id="2_yaldm"]
[ext_resource type="Texture2D" uid="uid://bn4nr4230q1he" path="res://scenes/build_phase/art/banana.png" id="3_huvbn"]
[ext_resource type="Script" path="res://scenes/build_phase/scripts/rotation_manager.gd" id="5_4lev5"]
[ext_resource type="Texture2D" uid="uid://hebfjp1g3xph" path="res://scenes/build_phase/art/arrow_ccw.png" id="6_spex1"]
[ext_resource type="Texture2D" uid="uid://bf28w2h5qv1kk" path="res://scenes/build_phase/art/arrow_cw.png" id="7_knus8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mipt1"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_452a7"]
size = Vector2(200, 80)

[node name="SnapTargetNode" type="Node2D"]
script = ExtResource("1_74qrg")

[node name="binary_tree_script" type="Node" parent="."]
script = ExtResource("2_5d5va")

[node name="SnapTarget" parent="." instance=ExtResource("2_yaldm")]

[node name="Sprite2D" parent="SnapTarget" index="1"]
self_modulate = Color(1, 1, 1, 1)
texture = ExtResource("3_huvbn")

[node name="RotationManager" type="Area2D" parent="."]
process_mode = 4
visible = false
script = ExtResource("5_4lev5")

[node name="RotateLeftButton" type="Button" parent="RotationManager"]
z_index = 15
z_as_relative = false
offset_left = -80.0
offset_top = -22.0
offset_right = 428.0
offset_bottom = 526.0
scale = Vector2(0.08, 0.08)
mouse_default_cursor_shape = 2
action_mode = 0
icon = ExtResource("6_spex1")
flat = true

[node name="RotateRightButton" type="Button" parent="RotationManager"]
z_index = 15
z_as_relative = false
offset_left = 40.0
offset_top = -22.0
offset_right = 548.0
offset_bottom = 526.0
scale = Vector2(0.08, 0.08)
mouse_default_cursor_shape = 2
action_mode = 0
icon = ExtResource("7_knus8")
flat = true
icon_alignment = 2

[node name="enter" type="CollisionShape2D" parent="RotationManager"]
shape = SubResource("RectangleShape2D_mipt1")

[node name="exit" type="CollisionShape2D" parent="RotationManager"]
shape = SubResource("RectangleShape2D_452a7")

[connection signal="mouse_shape_entered" from="RotationManager" to="RotationManager" method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="RotationManager" to="RotationManager" method="_on_mouse_shape_exited"]
[connection signal="mouse_exited" from="RotationManager/RotateLeftButton" to="RotationManager" method="_on_rotate_left_button_mouse_exited"]
[connection signal="pressed" from="RotationManager/RotateLeftButton" to="." method="_on_rotate_left_button_pressed"]
[connection signal="mouse_exited" from="RotationManager/RotateRightButton" to="RotationManager" method="_on_rotate_right_button_mouse_exited"]
[connection signal="pressed" from="RotationManager/RotateRightButton" to="." method="_on_rotate_right_button_pressed"]

[editable path="SnapTarget"]
